update text in notebook

--- a/its_live_web_app_tutorial.ipynb
+++ b/its_live_web_app_tutorial.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "## Step 1: Go to the web portal\n",
-    "Got to the its_live web app [data portal](https://nsidc.org/apps/itslive/). For Greenland, I like to change the projection to Polar Stereographic North (epsg:3413). To do this, toggle the 'N' button on the left side of the webpage on.\n",
+    "Got to the its_live web app [data portal](https://nsidc.org/apps/itslive/). For Greenland, I like to change the projection to Polar Stereographic North (epsg:3413). To do this, toggle the 'N' button on the left side of the webpage on. Also we will be downloading image-pair velocities, so make sure you select 'Data Access: Image Pair Velocity Selection' under the 'Toggle Data' button on the left side of the webpage\n",
     "\n",
     "Your webpage should look like this (*note the toggled 'N' on the left hand side):\n",
     "![web portal image](images/web_portal_3413.png) "
