--- a/its_live_web_app_tutorial.ipynb
+++ b/its_live_web_app_tutorial.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "## Step 2: Make your region of interest\n",
-    "Next, draw a polygon over your region of interest. For this tutorial, let's make our roi over Store Glacier. To draw a polygon click the pencil icon under the 'S' on the left hand side of the website.\n",
+    "Next, draw a polygon over your region of interest. For this tutorial, let's make our roi over Store Glacier. To draw a polygon click the pencil icon under the 'S' on the right hand side of the website.\n",
     "\n",
     "My polygon looks like this ![polygon image](images/polygon.png) \n",
     "\n"
