update ipynb and gitignore

--- a/its_live_web_app_tutorial.ipynb
+++ b/its_live_web_app_tutorial.ipynb
@@ -12,6 +12,7 @@
     "from multiprocessing import cpu_count\n",
     "from multiprocessing.pool import ThreadPool\n",
     "import os\n",
+    "from pathlib import Path\n",
     "import time\n",
     "import json\n",
     "import numpy as np\n",
@@ -102,6 +103,7 @@
    ],
    "source": [
     "output_path = 'image_pair_velocities/'\n",
+    "Path(output_path).mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "its_live_json = 'store_its_live_velocities_2022.json'\n",
     "\n",
