--- a/its_live_web_app_tutorial.ipynb
+++ b/its_live_web_app_tutorial.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "source": [
     "## Step 2: Make your region of interest\n",
-    "Next, draw a polygon over your region of interest. For this tutorial, let's make our roi over Store Glacier. To draw a polygon click the pencil icon under the 'S' on the right hand side of the website.\n",
+    "Next, draw a polygon over your region of interest. For this tutorial, let's make our roi over Store Glacier. To draw a polygon click the pencil icon under the 'S' on the left hand side of the website.\n",
     "\n",
     "My polygon looks like this ![polygon image](images/polygon.png) \n",
     "\n"
@@ -105,6 +105,7 @@
     "output_path = 'image_pair_velocities/'\n",
     "Path(output_path).mkdir(parents=True, exist_ok=True)\n",
     "\n",
+    "# I just unzipped and saved the json file in the main directory here\n",
     "its_live_json = 'store_its_live_velocities_2022.json'\n",
     "\n",
     "json_open = open(its_live_json)\n",
