fix text in notebook

--- a/its_live_web_app_tutorial.ipynb
+++ b/its_live_web_app_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f2f6c0bf-91e3-47d8-ac5e-75ffcb123b4a",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
    "metadata": {},
    "source": [
     "## Step 3: Download the data\n",
-    "Now click in the interior of the polygon. This will bring up a pop up where you can filter what image-pair velocities to download. For the sake of storage, let's make this smaller and filter only image pairs less than 7 days apart and in 2022. Also make sure to set the output as a JSON. Next click the 'Get Granule URLs' and set your path to where the json file will be downloaded.\n",
+    "Now click in the interior of the polygon. This will bring up a pop up where you can filter what image-pair velocities to download. For the sake of storage, let's make this smaller and filter only image pairs less than 7 days apart in 2022, and with 90% overlap of the polygon. Also make sure to set the output as a JSON. Next click the 'Get Granule URLs' and set your path to where the json file will be downloaded.\n",
     "\n",
     "My pop up looks like this\n",
     "\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9840a118-34f6-448d-b241-a4e66c28c495",
    "metadata": {},
    "outputs": [
@@ -77,27 +77,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220318T154001_N0400_R011_T22WED_20220318T193242_X_S2B_MSIL1C_20220323T153809_N0400_R011_T22WED_20220323T193502_G0120V02_P097.nc time (s): 0.8537733554840088\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220328T153841_N0400_R011_T22WED_20220328T192534_X_S2B_MSIL1C_20220402T153809_N0400_R011_T22WED_20220402T174110_G0120V02_P099.nc time (s): 0.9285557270050049\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220511T151811_N0400_R068_T22WED_20220511T190843_X_S2B_MSIL1C_20220516T151809_N0400_R068_T22WED_20220516T190102_G0120V02_P099.nc time (s): 0.9449284076690674\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220323T153809_N0400_R011_T22WED_20220323T193502_X_S2A_MSIL1C_20220328T153841_N0400_R011_T22WED_20220328T192534_G0120V02_P099.nc time (s): 0.9632740020751953\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220501T151811_N0400_R068_T22WED_20220501T185805_X_S2B_MSIL1C_20220506T151759_N0400_R068_T22WED_20220506T172714_G0120V02_P099.nc time (s): 1.0177719593048096\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220330T152809_N0400_R111_T22WED_20220330T192736_X_S2A_MSIL1C_20220404T152811_N0400_R111_T22WED_20220404T172920_G0120V02_P099.nc time (s): 1.028435230255127\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220412T153809_N0400_R011_T22WED_20220412T195215_X_S2A_MSIL1C_20220417T153811_N0400_R011_T22WED_20220417T192941_G0120V02_P097.nc time (s): 1.0359320640563965\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220615T151809_N0400_R068_T22WED_20220615T190256_X_S2A_MSIL1C_20220620T151951_N0400_R068_T22WED_20220620T190656_G0120V02_P095.nc time (s): 1.036501407623291\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220506T151759_N0400_R068_T22WED_20220506T172714_X_S2A_MSIL1C_20220511T151811_N0400_R068_T22WED_20220511T190843_G0120V02_P099.nc time (s): 1.1216285228729248\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220514T152811_N0400_R111_T22WED_20220514T191747_X_S2B_MSIL1C_20220519T152809_N0400_R111_T22WED_20220519T202554_G0120V02_P099.nc time (s): 1.2128682136535645\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2B_MSIL1C_20220330T152809_N0400_R111_T22WDD_20220330T192736_X_S2A_MSIL1C_20220404T152811_N0400_R111_T22WDD_20220404T172920_G0120V02_P095.nc time (s): 0.6398301124572754\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220411T151811_N0400_R068_T22WED_20220411T191730_X_S2B_MSIL1C_20220416T151759_N0400_R068_T22WED_20220416T201749_G0120V02_P096.nc time (s): 0.764479398727417\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2A_MSIL1C_20220328T153841_N0400_R011_T22WDD_20220328T192534_X_S2B_MSIL1C_20220402T153809_N0400_R011_T22WDD_20220402T174110_G0120V02_P095.nc time (s): 0.9171648025512695\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220706T153821_N0400_R011_T22WED_20220706T204337_X_S2B_MSIL1C_20220711T153819_N0400_R011_T22WED_20220711T173924_G0120V02_P093.nc time (s): 0.8885962963104248\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2B_MSIL1C_20220323T153809_N0400_R011_T22WDD_20220323T193502_X_S2A_MSIL1C_20220328T153841_N0400_R011_T22WDD_20220328T192534_G0120V02_P092.nc time (s): 0.8154876232147217\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2A_MSIL1C_20220514T152811_N0400_R111_T22WDD_20220514T191747_X_S2B_MSIL1C_20220519T152809_N0400_R111_T22WDD_20220519T202554_G0120V02_P091.nc time (s): 0.8241724967956543\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2B_MSIL1C_20220515T154809_N0400_R054_T22WDD_20220515T175344_X_S2A_MSIL1C_20220520T154821_N0400_R054_T22WDD_20220520T213130_G0120V02_P090.nc time (s): 0.6717145442962646\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220512T153809_N0400_R011_T22WED_20220512T174010_X_S2A_MSIL1C_20220517T153821_N0400_R011_T22WED_20220517T204640_G0120V02_P091.nc time (s): 0.8394286632537842\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220620T151951_N0400_R068_T22WED_20220620T190656_X_S2B_MSIL1C_20220625T151809_N0400_R068_T22WED_20220625T190033_G0120V02_P092.nc time (s): 0.9459021091461182\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2B_MSIL1C_20220502T153809_N0400_R011_T22WDD_20220502T175309_X_S2A_MSIL1C_20220507T153821_N0400_R011_T22WDD_20220507T191907_G0120V02_P092.nc time (s): 1.8768889904022217\n",
-      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220502T153809_N0400_R011_T22WED_20220502T175309_X_S2A_MSIL1C_20220507T153821_N0400_R011_T22WED_20220507T191907_G0120V02_P097.nc time (s): 4.458853483200073\n"
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220514T152811_N0400_R111_T22WED_20220514T191747_X_S2B_MSIL1C_20220519T152809_N0400_R111_T22WED_20220519T202554_G0120V02_P099.nc time (s): 0.8573760986328125\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220328T153841_N0400_R011_T22WED_20220328T192534_X_S2B_MSIL1C_20220402T153809_N0400_R011_T22WED_20220402T174110_G0120V02_P099.nc time (s): 0.8656458854675293\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220501T151811_N0400_R068_T22WED_20220501T185805_X_S2B_MSIL1C_20220506T151759_N0400_R068_T22WED_20220506T172714_G0120V02_P099.nc time (s): 0.9561398029327393\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220323T153809_N0400_R011_T22WED_20220323T193502_X_S2A_MSIL1C_20220328T153841_N0400_R011_T22WED_20220328T192534_G0120V02_P099.nc time (s): 0.957073450088501\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220615T151809_N0400_R068_T22WED_20220615T190256_X_S2A_MSIL1C_20220620T151951_N0400_R068_T22WED_20220620T190656_G0120V02_P095.nc time (s): 0.9630141258239746\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220511T151811_N0400_R068_T22WED_20220511T190843_X_S2B_MSIL1C_20220516T151809_N0400_R068_T22WED_20220516T190102_G0120V02_P099.nc time (s): 0.9694595336914062\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220412T153809_N0400_R011_T22WED_20220412T195215_X_S2A_MSIL1C_20220417T153811_N0400_R011_T22WED_20220417T192941_G0120V02_P097.nc time (s): 1.0427603721618652\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220502T153809_N0400_R011_T22WED_20220502T175309_X_S2A_MSIL1C_20220507T153821_N0400_R011_T22WED_20220507T191907_G0120V02_P097.nc time (s): 1.0725743770599365\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220318T154001_N0400_R011_T22WED_20220318T193242_X_S2B_MSIL1C_20220323T153809_N0400_R011_T22WED_20220323T193502_G0120V02_P097.nc time (s): 1.2007520198822021\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220330T152809_N0400_R111_T22WED_20220330T192736_X_S2A_MSIL1C_20220404T152811_N0400_R111_T22WED_20220404T172920_G0120V02_P099.nc time (s): 1.2738094329833984\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220506T151759_N0400_R068_T22WED_20220506T172714_X_S2A_MSIL1C_20220511T151811_N0400_R068_T22WED_20220511T190843_G0120V02_P099.nc time (s): 1.533513069152832\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2B_MSIL1C_20220330T152809_N0400_R111_T22WDD_20220330T192736_X_S2A_MSIL1C_20220404T152811_N0400_R111_T22WDD_20220404T172920_G0120V02_P095.nc time (s): 0.6643335819244385\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2A_MSIL1C_20220328T153841_N0400_R011_T22WDD_20220328T192534_X_S2B_MSIL1C_20220402T153809_N0400_R011_T22WDD_20220402T174110_G0120V02_P095.nc time (s): 0.8327116966247559\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2B_MSIL1C_20220502T153809_N0400_R011_T22WDD_20220502T175309_X_S2A_MSIL1C_20220507T153821_N0400_R011_T22WDD_20220507T191907_G0120V02_P092.nc time (s): 0.7573761940002441\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2B_MSIL1C_20220323T153809_N0400_R011_T22WDD_20220323T193502_X_S2A_MSIL1C_20220328T153841_N0400_R011_T22WDD_20220328T192534_G0120V02_P092.nc time (s): 0.797569751739502\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220411T151811_N0400_R068_T22WED_20220411T191730_X_S2B_MSIL1C_20220416T151759_N0400_R068_T22WED_20220416T201749_G0120V02_P096.nc time (s): 1.025050163269043\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220620T151951_N0400_R068_T22WED_20220620T190656_X_S2B_MSIL1C_20220625T151809_N0400_R068_T22WED_20220625T190033_G0120V02_P092.nc time (s): 0.933525562286377\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2A_MSIL1C_20220514T152811_N0400_R111_T22WDD_20220514T191747_X_S2B_MSIL1C_20220519T152809_N0400_R111_T22WDD_20220519T202554_G0120V02_P091.nc time (s): 0.8914101123809814\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2A_MSIL1C_20220706T153821_N0400_R011_T22WED_20220706T204337_X_S2B_MSIL1C_20220711T153819_N0400_R011_T22WED_20220711T173924_G0120V02_P093.nc time (s): 1.0903704166412354\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W040/S2B_MSIL1C_20220512T153809_N0400_R011_T22WED_20220512T174010_X_S2A_MSIL1C_20220517T153821_N0400_R011_T22WED_20220517T204640_G0120V02_P091.nc time (s): 0.9865732192993164\n",
+      "url: https://its-live-data.s3.amazonaws.com/velocity_image_pair/sentinel2-latest/N70W050/S2B_MSIL1C_20220515T154809_N0400_R054_T22WDD_20220515T175344_X_S2A_MSIL1C_20220520T154821_N0400_R054_T22WDD_20220520T213130_G0120V02_P090.nc time (s): 2.692373514175415\n"
      ]
     }
    ],
