add more md cells

--- a/ITS_LIVE API_tutorial.ipynb
+++ b/ITS_LIVE API_tutorial.ipynb
@@ -36,19 +36,27 @@
    "id": "c63a29ea-50db-4e95-ab12-6c4e374b1b23",
    "metadata": {},
    "source": [
-    "## Step 1 Define your region of interest \n",
+    "## Step 1: Define your region of interest \n",
     "I created a polygon in QGIS similar to that of the polygon we drew in the `its_live_web_app_tutorial.ipynb`. Below I read that polygon using `geopandas`' read_file method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "11c9c4fe-8198-47af-bdeb-cd4cb6a7e647",
    "metadata": {},
    "outputs": [],
    "source": [
     "store_poly_path = '/media/laserglaciers/upernavik/its_live_tutorial/geoms/store_poly.shp'\n",
     "store_poly = gpd.read_file(store_poly_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ddc47f8-ff9a-4a13-8e5e-587d3bb13b04",
+   "metadata": {},
+   "source": [
+    "## Step 2: Convert polygon to proper string format"
    ]
   },
   {
@@ -61,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "48aaa0ab-e2cb-44c3-94f1-7d8f3d448e79",
    "metadata": {},
    "outputs": [],
@@ -84,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "ab7d3d63-a5c2-46a8-9e02-068a69515178",
    "metadata": {},
    "outputs": [
@@ -94,13 +102,21 @@
        "'-50.45417579726429, 70.39259671463697, -50.536348731615135, 70.37960498836892, -50.587795931846706, 70.39342772346002, -50.580830436256754, 70.40916334718578, -50.517852377688946, 70.42672250385142, -50.449540861970135, 70.44399543559763, -50.41104445188681, 70.46244888198, -50.38018041105781, 70.48538988092797, -50.32924599073642, 70.49215391859269, -50.252638946456926, 70.47600804789774, -50.250940399049156, 70.45108603336654, -50.31951241771743, 70.42484788496357, -50.39799740804242, 70.40257031942717, -50.45417579726429, 70.39259671463697'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "poly_string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb445033-06c4-44ee-ab82-590cf850a47c",
+   "metadata": {},
+   "source": [
+    "## S"
    ]
   },
   {
