add more md cells

--- a/ITS_LIVE API_tutorial.ipynb
+++ b/ITS_LIVE API_tutorial.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "11c9c4fe-8198-47af-bdeb-cd4cb6a7e647",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "48aaa0ab-e2cb-44c3-94f1-7d8f3d448e79",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "ab7d3d63-a5c2-46a8-9e02-068a69515178",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "'-50.45417579726429, 70.39259671463697, -50.536348731615135, 70.37960498836892, -50.587795931846706, 70.39342772346002, -50.580830436256754, 70.40916334718578, -50.517852377688946, 70.42672250385142, -50.449540861970135, 70.44399543559763, -50.41104445188681, 70.46244888198, -50.38018041105781, 70.48538988092797, -50.32924599073642, 70.49215391859269, -50.252638946456926, 70.47600804789774, -50.250940399049156, 70.45108603336654, -50.31951241771743, 70.42484788496357, -50.39799740804242, 70.40257031942717, -50.45417579726429, 70.39259671463697'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
    "id": "cb445033-06c4-44ee-ab82-590cf850a47c",
    "metadata": {},
    "source": [
-    "## S"
+    "## Step 3: Fetch the image-pair velocity urls"
    ]
   },
   {
@@ -169,6 +169,14 @@
    "metadata": {},
    "source": [
     "Below is how to turn the requests return into a json so we can easily modify it and grab an image-pair velocity url. We then open the file and calculate the strain rates using [`iceutils`](https://github.com/bryanvriel/iceutils)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87e8068f-6d70-491e-af47-1db3c8fe1651",
+   "metadata": {},
+   "source": [
+    "## Step 4: Read the data and calculate strain rates"
    ]
   },
   {
@@ -226,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "bc006989-3297-48e1-b998-2c943e493c3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c89b50021754f4ca00cc9557287730c",
+       "model_id": "892c35c4e84545969f0ced390f16e57a",
        "version_major": 2,
        "version_minor": 0
       },
