add lagrangain poly sample and gdf concat

--- a/dask_multiprocessing_test.ipynb
+++ b/dask_multiprocessing_test.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 79,
    "id": "9e3238ea-4179-4e4d-8788-fc7b89b24422",
    "metadata": {},
    "outputs": [],
@@ -80,13 +80,18 @@
     "\n",
     "    datacube = xr.open_dataset(s3_url, engine='zarr',\n",
     "                               storage_options={'anon':True},\n",
-    "                               chunks=chunks,**{'lock':False})\n",
+    "                               chunks=chunks)\n",
+    "\n",
+    "    # datacube = rxr.open_rasterio(s3_url, engine='zarr',\n",
+    "    #                            storage_options={'anon':True},\n",
+    "    #                            chunks=chunks)\n",
+    "    \n",
     "    return datacube\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 80,
    "id": "c55252a7-7176-4205-b35b-7691a5c582f2",
    "metadata": {},
    "outputs": [],
@@ -96,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 81,
    "id": "f4635968-74f0-4678-a709-467b135d01d7",
    "metadata": {},
    "outputs": [
@@ -351,7 +356,7 @@
        "[3086 rows x 10 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "id": "2b405359-9f35-45f4-a6d6-569f52d70a03",
    "metadata": {},
    "outputs": [
@@ -389,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "id": "372dc6c3-8328-4f1e-84ed-42c95421d050",
    "metadata": {},
    "outputs": [
@@ -463,7 +468,7 @@
        "1270  POLYGON ((-50.19443 69.81052, -47.60256 69.871...            0  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,24 +481,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "id": "fd25c7da-546c-4286-aa37-d0afdb41ba97",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "ZarrBackendEntrypoint.open_dataset() got an unexpected keyword argument 'lock'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_26128/15914100.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkuj_vels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_in_s3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mkuj_vels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkuj_vels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchunk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m\"mid_date\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkuj_vels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmid_date\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# setting the mid_date chunksize to the time dimensions helps A LOT\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mkuj_vels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkuj_vels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msortby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'mid_date'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/tmp/ipykernel_26128/2762827230.py\u001b[0m in \u001b[0;36mread_in_s3\u001b[0;34m(http_url, chunks)\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0ms3_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms3_url\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.s3.amazonaws.com'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     datacube = xr.open_dataset(s3_url, engine='zarr',\n\u001b[0m\u001b[1;32m     27\u001b[0m                                \u001b[0mstorage_options\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'anon'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m                                chunks=chunks,**{'lock':False})\n",
-      "\u001b[0;32m~/anaconda3/envs/its_live_tutorial/lib/python3.10/site-packages/xarray/backends/api.py\u001b[0m in \u001b[0;36mopen_dataset\u001b[0;34m(filename_or_obj, engine, chunks, cache, decode_cf, mask_and_scale, decode_times, decode_timedelta, use_cftime, concat_characters, decode_coords, drop_variables, inline_array, chunked_array_type, from_array_kwargs, backend_kwargs, **kwargs)\u001b[0m\n\u001b[1;32m    570\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    571\u001b[0m     \u001b[0moverwrite_encoded_chunks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"overwrite_encoded_chunks\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 572\u001b[0;31m     backend_ds = backend.open_dataset(\n\u001b[0m\u001b[1;32m    573\u001b[0m         \u001b[0mfilename_or_obj\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    574\u001b[0m         \u001b[0mdrop_variables\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdrop_variables\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: ZarrBackendEntrypoint.open_dataset() got an unexpected keyword argument 'lock'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "kuj_vels = read_in_s3(url)\n",
     "kuj_vels = kuj_vels.chunk({\"mid_date\": len(kuj_vels.mid_date)}) # setting the mid_date chunksize to the time dimensions helps A LOT\n",
@@ -502,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "id": "bfd7153b-1cbe-455b-bdf6-adfdadf80330",
    "metadata": {
     "scrolled": true
